# sympyschool

./: .gitignore  LICENSE  README.md  anageo.ipynb  mphelper-test.ipynb  pyproject.toml  testimage.fdb_latexmk  testimage.fls  testimage.tex
doc/: anageo-doc.ipynb  stochjgst-doc.ipynb
fbpy/: anageo.py  mplhelper.py
sympyschool/: anageo.py  mplhelper.py  stochjgst.py
tests/: test_anageo.py  test_anageo_tikz_image2.tex  test_anageo_tikz_image3.tex  test_anageo_tikz_image4.tex  test_anageo_tikz_image5.tex  test_anageo_tikz_image6.tex  test_anageo_tikz_image7.tex  test_anageo_tikz_image8.tex  test_stochjgst.py
